plugins {
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.webbank'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
	compile('org.springframework:spring-webmvc:5.0.1.RELEASE')
	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	compile group: 'org.liquibase', name: 'liquibase-core', version: '3.9.0'
	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
	// https://mvnrepository.com/artifact/org.springframework/spring-webmvc
	compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.7.RELEASE'
	// https://mvnrepository.com/artifact/javax.servlet/jstl
	compile group: 'javax.servlet', name: 'jstl', version: '1.2'
	// https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
	compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.36'
	// https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
	compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
	testCompile group: 'junit', name: 'junit', version: '4.12'
	// https://mvnrepository.com/artifact/org.keycloak/keycloak-core
	compile group: 'org.keycloak', name: 'keycloak-core', version: '10.0.2'
	// https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter
	compile group: 'org.keycloak', name: 'keycloak-spring-boot-starter', version: '10.0.2'
	// https://mvnrepository.com/artifact/org.keycloak.bom/keycloak-adapter-bom
	compile group: 'org.keycloak.bom', name: 'keycloak-adapter-bom', version: '10.0.2', ext: 'pom'

}

test {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}
